@@ -1,0 +1,63 @@
+# Define some default values that can be overridden by system properties
+hbase.root.logger=INFO,console
+hbase.log.dir=.
+hbase.log.file=hbase.log
+
+# Define the root logger to the system property "hbase.root.logger".
+log4j.rootLogger=${hbase.root.logger}
+
+# Logging Threshold
+log4j.threshhold=ALL
+
+#
+# Daily Rolling File Appender
+#
+log4j.appender.DRFA=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.DRFA.File=${hbase.log.dir}/${hbase.log.file}
+
+# Rollver at midnight
+log4j.appender.DRFA.DatePattern=.yyyy-MM-dd
+
+# 30-day backup
+#log4j.appender.DRFA.MaxBackupIndex=30
+log4j.appender.DRFA.layout=org.apache.log4j.PatternLayout
+
+# Pattern format: Date LogLevel LoggerName LogMessage
+#log4j.appender.DRFA.layout.ConversionPattern=%d{ISO8601} %p %c: %m%n
+
+# Debugging Pattern format
+log4j.appender.DRFA.layout.ConversionPattern=%d %-5p [%t] %C{2}(%L): %m%n
+
+
+#
+# console
+# Add "console" to rootlogger above if you want to use this 
+#
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.target=System.err
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d %-5p [%t] %C{2}(%L): %m%n
+
+# Custom Logging levels
+
+#log4j.logger.org.apache.hadoop.fs.FSNamesystem=DEBUG
+
+#log4j.logger.org.apache.hadoop=WARN
+
+log4j.logger.org.apache.hadoop.hbase.PerformanceEvaluation=WARN
+log4j.logger.org.apache.hadoop.hbase.client=DEBUG
+log4j.logger.org.apache.hadoop.hbase.filter=INFO
+log4j.logger.org.apache.hadoop.hbase.generated=INFO
+log4j.logger.org.apache.hadoop.hbase.hql=INFO
+log4j.logger.org.apache.hadoop.hbase.io=INFO
+log4j.logger.org.apache.hadoop.hbase.ipc=INFO
+log4j.logger.org.apache.hadoop.hbase.mapred=INFO
+log4j.logger.org.apache.hadoop.hbase.master=DEBUG
+log4j.logger.org.apache.hadoop.hbase.regionserver=DEBUG
+log4j.logger.org.apache.hadoop.hbase.rest=INFO
+log4j.logger.org.apache.hadoop.hbase.thrift=INFO
+log4j.logger.org.apache.hadoop.hbase.util=INFO
+
+log4j.logger.org.apache.hadoop.mapred=DEBUG
+#log4j.logger.org.apache.hadoop.mapred.JobTracker=DEBUG
+#log4j.logger.org.apache.hadoop.mapred.TaskTracker=DEBUG
